--- a/netlify.toml
+++ b/netlify.toml
@@ -2,7 +2,12 @@
 [functions]
   node_bundler = "esbuild"
 
+# [[redirects]]
+# from = "/proxy"
+# to = "/.netlify/functions/proxy"
+# status = 200
+
 [[redirects]]
-from = "/proxy"
-to = "/.netlify/functions/proxy"
-status = 200
+  from = "/*"
+  to = "https://api-free.deepl.com/:splat"
+  status = 200
